<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_wifi_24" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#2A2B2C"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint"
            android:textColor="#999999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#999999"
            android:textSize="10sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_orange"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/open"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_hint_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hintRoot"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/author"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_forum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forum"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="#999999"
            android:textSize="10sp" />
    </LinearLayout>
</ScrollView>